tests/NormalTests/paczka1/small_fuzzy/62051165.err
Error in line 1: F3eVrOXpH A934 41,0
Error in line 5: gDy S681 98,8
Error in line 6: F3eVrOXpH S681 3,0
Error in line 9: gDy A934 99,9
